// dev by I Putu Kusuma Negara, ST, MKOM.
// Model for Block

syntax = "proto3";

option csharp_namespace = "UbudKusCoin.Grpc";

service BlockService {
  rpc GetRange(BlockParams) returns (BlockList);
  rpc GetByHeight(Block) returns (Block);
  rpc GetByHash(Block) returns (Block);
  rpc GetFirst(Block) returns (Block);
  rpc GetLast(Block)  returns (Block);
}

message BlockParams{
  int32 page_number = 1;
  int32 result_per_page = 2; 
}

message BlockList {
  repeated Block blocks = 1;
}

message Block {
	int32 version = 1;
	int64 height = 2;
	int64 time_stamp = 3;
	string prev_hash = 4;
	string hash = 5;
	string transactions = 6;
  string validator = 7;
  string merkle_root = 8;
  int32  num_of_tx = 9;
  double total_amount = 10;
  double total_reward = 11;
  int32 difficulty = 12;
  int32 nonce  = 13;
  int64 minter_balance = 14;
  string minter_address = 15;
  int32 size = 16;
  int32 build_time = 17;
}
